gui/3.6/graphstudio/overview.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)[Next](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.6/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
      * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/map-data-to-graph)
      * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/load-data)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/write-queries)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.6/graphstudio/migrate-from-relational-database)
      * [Export And Import Solution](https://docs.tigergraph.com/gui/3.6/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.6/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/graphstudio/known-issues)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.6/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.6/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.6/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.6/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/README)
        * [Logs](https://docs.tigergraph.com/gui/3.6/admin-portal/monitoring/log-viewer)
      * Management
        * [License](https://docs.tigergraph.com/gui/3.6/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.6/admin-portal/management/user-management)
      * [Components](https://docs.tigergraph.com/gui/3.6/admin-portal/components/README)
        * [Nginx](https://docs.tigergraph.com/gui/3.6/admin-portal/components/nginx)
        * [RESTPP](https://docs.tigergraph.com/gui/3.6/admin-portal/components/restpp)
        * [GSQL](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gsql)
        * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.6/admin-portal/components/gui)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.6/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.6/admin-portal/security/sso-aad)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.6/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.6/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.6/admin-portal/known-issues)


GraphStudio and Admin Portal 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * GraphStudio
  * [Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.6/modules/graphstudio/pages/overview.adoc)
### Contents
  * [Feature Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_feature_overview)
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema)
  * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph)
  * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data)
  * [Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_explore_graph)
  * [Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_visual_query_builder)
  * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries)
  * [GraphStudio Online Test Drive](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_online_test_drive)
  * [GraphStudio Availability](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_availability)
  * [Cloud](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_cloud)
  * [On-Premises](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_on_premises)
  * [User menu](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_user_menu)
  * [GraphStudio Session Timeout](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_session_timeout)
  * [Browser Support](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#graphstudio-online-test-drive-)
  * [GraphStudio Limitations](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_limitations)
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema_2)
  * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph_2)
  * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data_2)
  * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries_2)


# Overview
### Contents
  * [Feature Overview](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_feature_overview)
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema)
  * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph)
  * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data)
  * [Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_explore_graph)
  * [Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_visual_query_builder)
  * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries)
  * [GraphStudio Online Test Drive](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_online_test_drive)
  * [GraphStudio Availability](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_availability)
  * [Cloud](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_cloud)
  * [On-Premises](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_on_premises)
  * [User menu](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_user_menu)
  * [GraphStudio Session Timeout](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_session_timeout)
  * [Browser Support](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#graphstudio-online-test-drive-)
  * [GraphStudio Limitations](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_limitations)
  * [Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema_2)
  * [Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph_2)
  * [Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data_2)
  * [Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries_2)


TigerGraph GraphStudio™ is an intuitive, browser-based interface for graph-based application development tasks.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_feature_overview)Feature Overview
![graphstudio main page](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/graphstudio-main-page.png)
GraphStudio provides the following features:
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema)[Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
The **Design Schema** page is where users edit their graph schema. Users are able to add and edit the attributes and fields of every vertex and edge they add to the schema.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph)[Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/map-data-to-graph)
The **Map Data To Graph** page is where users add data from external files and map it to the corresponding vertices or edges in the schema.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data)[Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/load-data)
The **Load Data** page is where users load their data from their data source to the database as specified in the mapping stage.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_explore_graph)[Explore Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/explore-graph/README)
The **Explore Graph** page is where users can explore their graph data and uncover insights based on their data. Here users can search for vertices in a graph, discover nearby vertices, find paths between vertices, and run GSQL queries. Users will also be able to use the **Graph Exploration** panel on this page to modify and augment the visualization of their exploration results.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_visual_query_builder)[Visual Query Builder](https://docs.tigergraph.com/gui/3.6/graphstudio/build-graph-patterns/visual-query-builder-overview)
The **Build Graph Patterns** page is where users can build graph queries visually with a drag-and-drop interface. In this way, users will not need to understand any GSQL to build queries, run queries, or evaluate results.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries)[Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/write-queries)
The **Write Queries** page is where users can write and test out custom GSQL queries using a text-based query editor. The query editor validates the user’s query syntax and notifies the user of any errors.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_online_test_drive)GraphStudio Online Test Drive
Visit TigerGraph Test Drive demos at: [https://testdrive.tigergraph.com/](https://testdrive.tigergraph.com)
The GraphStudio online Test Drive features several instances of the TigerGraph system, each one targeting a different use case. Each copy of TigerGraph has a GraphStudio interface and is preloaded with application-specific queries and synthetic data. These demo applications are provided in a read-only mode. Users can explore and play with pre-installed queries. Users on these demo systems cannot save changes to the graph schema, the loading job, or queries.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_availability)GraphStudio Availability
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_cloud)Cloud
If you are using GraphStudio in the TigerGraph Cloud environment, you can directly access GraphStudio via your browser.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_on_premises)On-Premises
For on-premises deployment, the server by default is listening on port 14240. Any machine connected to the server can access GraphStudio from a browser with the following address:
```
http://<your_tigergraph_server_ip_address>:<your_tigergraph_server_port>
http![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

If you cannot access GraphStudio, check your firewall to ensure that port 14240 is open.
If you see the error message "Oops, looks like something went wrong" on the login page, the GUI service might be off.
![login error](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/login-error.png)
To verify the status of the GUI service, run the following command in a Linux shell on the server.
```
$ gadmin status gui
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

If it is off, turn it on by running:
```
$ gadmin start gui
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

This error might also be caused by an IP range block rule from your ad blocker. Please try turning off your ad blocker for the GraphStudio page and try again. GraphStudio does not have any ads.   
---  
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_user_menu)User menu
The User icon ![image](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/account_btn.png) in the upper-right corner opens a menu with GUI customization options and links to these documentation pages.
GraphStudio supports English, Simplified Chinese, and Japanese user interface language options.
![language picker](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/language-picker.png)
The user interface dark theme is enabled by default. The light theme looks like this:
![gui light theme](https://docs.tigergraph.com/gui/3.6/graphstudio/_images/gui-light-theme.png)
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_session_timeout)GraphStudio Session Timeout
GraphStudio has a default session timeout of 1 week. If, during this time, the user has no interaction with the page, the session will expire and the user will be logged out automatically. The timeout can be configured with this server command:
```
$ gadmin config set GUI.ClientIdleTimeSec [timeout]
bash![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#graphstudio-online-test-drive-)Browser Support
As of Jan 2020, the GraphStudio UI is certified on the following browsers:
Browser | Chrome | Safari | Firefox | Opera | Edge | Internet Explorer  
---|---|---|---|---|---|---  
Supported version | 54.0+ | 11.1+ | 59.0+ | 52.0+ | 80.0+ | 10+  
Not all features are guaranteed to work on other browsers.
Please make sure to enable JavaScript and cookies in your browser settings.
## [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_graphstudio_limitations)GraphStudio Limitations
Some features available in GSQL are not available in GraphStudio.
### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_design_schema_2)[Design Schema](https://docs.tigergraph.com/gui/3.6/graphstudio/design-schema)
  * Fixed binary data types are not supported.
  * PRIMARY KEY and composite key are not supported.


### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_map_data_to_graph_2)[Map Data To Graph](https://docs.tigergraph.com/gui/3.6/graphstudio/map-data-to-graph)
  * Cannot load JSON data.


### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_load_data_2)[Load Data](https://docs.tigergraph.com/gui/3.6/graphstudio/load-data)
  * Data loading jobs written in a GSQL console are not shown in GraphStudio.
  * `USING` options are not available.
  * Concurrent loading is not available.


### [](https://docs.tigergraph.com/gui/3.6/graphstudio/overview#_write_queries_2)[Write Queries](https://docs.tigergraph.com/gui/3.6/graphstudio/write-queries)
  * You cannot define a user-defined function. However, you can use user-defined functions created from TigerGraph Server by importing a solution with pre-defined UDFs into GraphStudio.


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


